# bmstu_cpp_work

./: .gitignore  CMakeLists.txt  README.md  let_9.sh
.github/workflows/: ci-cpp-style-check.yml
ancient_knowledge/: Ве_крест_крест.h
deleter and ptr/: hw_tree.hpp  hw_tree_tests.cpp
dummy_string_hw/: hw_2.h  hw_2_test.cpp
dummy_vector_hw/: hw_3_array_bundle.h
hw_2_dummy_string/: hw_2.h  hw_2_test.cpp
hw_2_string/: hw_2.cpp  hw_2.h  hw_2_test.cpp
hw_3_dummy_vector/: hw_3_array_bundle.h  hw_3_dummy_vector.h  hw_3_dummy_vector_test.cpp
hw_3_vector/: hw_3_array_bundle.h  hw_3_vector.h  hw_3_vector_test.cpp
hw_4_list/: hw_4_list.h  hw_4_list_test.cpp
hw_5_optional/: hw_5_optional.h  hw_5_optional_test.cpp
hw_6_true_vector/: hw_3_dummy_vector.h  hw_6_raw_memory.h  hw_6_raw_memory_tests.cpp  hw_6_raw_memory_tests.h  hw_6_true_vector.h
let_10/: let_10.cpp
let_12/: text
let_3_fresco/: CMakeLists.txt  let_3.cpp
let_4_phones/: let_4.cpp  let_4.h  let_4_test.cpp
let_5_bruteforce/: let_5.cpp  let_5.h
let_6/: CMakeLists.txt
let_6_db/: CMakeLists.txt  let_6.cpp  let_6.h
let_7/: 3232.txt  let_7.cpp  let_7.h
let_7_palindrome/: CMakeLists.txt  let_7.cpp  let_7.h
let_9/: CMakeLists.txt  let_9.cpp
let_9_perfect/: let_9.cpp
let_template/: let_template.cpp  let_template.hpp  let_template_test.cpp
list_hw/: hw_4_list.h  hw_4_list_test.cpp
optional_hw/: hw_5_optional.h  hw_5_optional_test.cpp
sandbox/: CMakeLists.txt  sand.cpp  sandbox_1.cpp  sandbox_1.h  sandbox_list.cpp  sandbox_list.h
scripts/: codestyle.sh
tree_hw/: hw_7_set.cpp  hw_7_set.hpp  hw_7_tests.cpp  hw_7_tree.cpp  hw_7_tree.hpp
vector_hw/: hw_6_raw_memory.h  hw_6_tests.cpp  hw_6_true_vector.h
